# notification-container

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  grafana_dashboard_template.json  prometheus.yml  pyproject.toml
app/: config.py  logger.py  main.py  metrics.py  on_startup.py  service.py
app/clients/: polling_worker.py  rabbit.py
app/clients/aioredis/: redis_client.py
app/clients/rabbit/: client.py  create_queues.py  provide.py
app/clients/redis/: redis_client.py
app/dependencies/: container.py
app/dependencies/providers/: __init__.py  rabbit.py
app/enums/: circuit_breaker.py  logging.py  polling_workers.py
app/exceptions/: circuit_breaker.py  rabbit.py
app/origin_clients/: base_client.py  tamtam.py
app/polling_clients/: base_client.py  tamtam.py
app/polling_workers/: http_worker.py  tamtam.py
app/schemas/: message.py
app/utils/: loop_settings.py  rabbit_waiter.py
app/utils/circuit_breaker/: base.py  rabbit.py  redis.py
grafana/: datasources.yaml
