[project]
name = "polling-container"
version = "0.1.0"
authors = [{ name = "Черемисин Максим Ильич", email = "b1elq@mail.ru" }, { name = "Нестеров Эдуард Михайлович" }]
description = "Контейнер-агрегатор событий мессенджеров. Отслеживает обновления уведомлений в ботах через polling и отправляет логи в RabbitMQ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	
	"faststream[rabbit]",
    "loguru",
    "dishka",
    "prometheus_client",
    "pydantic",
    "pydantic-settings"
]
