[project]
name = "notification-container"
version = "0.1.0"
authors = [{ name = "Черемисин Максим Ильич", email = "b1elq@mail.ru" }, { name = "Нестеров Эдуард Михайлович" }]
description = "Контейнер-агрегатор событий мессенджеров. Отслеживает обновления уведомлений в ботах через polling и отправляет логи в RabbitMQ"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
	
	"faststream[rabbit]",
    "loguru",
    "dishka",
    "prometheus_client",
    "pydantic",
    "pydantic-settings",
    "httpx (>=0.28.1,<0.29.0)",
    "redis",
    "prometheus-client"
]
